[project]
name = "abm-backend"
version = "0.2.0"
description = "Full backend for ABM landing page personalization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["abm"]

[tool.uv.workspace]
members = [
    "python3.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
